configure gh-pages

--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "investment_tracker",
+  "homepage": "http://jhnsartain3.github.io/investment_tracker",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "react-scripts build && gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -37,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
