--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cross-env": "^5.2.0",
     "dateformat": "^3.0.3",
     "flux": "^3.1.3",
+    "jwt-decode": "^2.2.0",
     "lodash.find": "^4.6.0",
     "prop-types": "latest",
     "react": "^16.6.3",
