--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "flux": "^3.1.3",
     "jwt-decode": "^2.2.0",
     "lodash.find": "^4.6.0",
-    "prop-types": "latest",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-ga": "^2.5.6",
     "react-quill": "^1.3.3",
     "react-router-dom": "^4.3.1",
