--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-ga": "^2.5.6",
+    "react-ga": "^2.7.0",
     "react-quill": "^1.3.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^3.4.0",
     "shards-react": "^1.0.0",
     "shortid": "^2.2.14"
   },
