--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "investment_tracker",
-  "homepage": "http://jhnsartain3.github.io/investment_tracker",
+  "homepage": "https://investmenttracker.sartainstudios.com",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -44,6 +44,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.2.0"
+    "gh-pages": "^3.1.0"
   }
 }
